# CIS-024-Final

./: README.md  pyproject.toml  scraper.py
lib/: email_sender.py
