[tool.poetry]
name = "yosemite-scraper"
version = "0.1.0"
description = "A tool to scrape available campsites from the recreation.gov website"
authors = ["Ryan Dyke <ryanjdyke@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.16.0"
yagmail = "^0.15.293"
webdrivermanager = "^0.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
